--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         shell: bash
         run: |
           echo "getting vs path from vswhere and running vcvarsall.bat vswhere -all -legacy -property installationPath"
-          for /f "delims=" %%i in ('vswhere -all -legacy -property installationPath') do set VS_PATH=%%i
+          set VS_PATH=$(vswhere -all -legacy -property installationPath)
           call "%VS_PATH%\VC\Auxiliary\Build\vcvarsall.bat" x64
           msys2 -c "./configure --toolchain=msvc --arch=x86_64 --prefix=$(pwd)/build_output --extra-cflags="-DLIBTWOLAME_STATIC" --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic;make -j$(nproc);make install"
 
