--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,8 @@ jobs:
         run: |
           echo "getting vs path from vswhere and running vcvarsall.bat vswhere -all -legacy -property installationPath"
           set VS_PATH=$(vswhere -all -legacy -property installationPath)
-          call "%VS_PATH%\VC\Auxiliary\Build\vcvarsall.bat" x64
+          echo "vs path is $VS_PATH"
+          "$VS_PATH\VC\Auxiliary\Build\vcvarsall.bat" x64
           msys2 -c "./configure --toolchain=msvc --arch=x86_64 --prefix=$(pwd)/build_output --extra-cflags="-DLIBTWOLAME_STATIC" --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic;make -j$(nproc);make install"
 
       - name: Prepare for artifact
