--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
   build-msvc:
-    runs-on: windows-latest
+    runs-on: windows-2022 # Windows Server 2022 so that it keeps VS2022
     needs: set-version
     env:
       VERSION: ${{ needs.set-version.outputs.version }}
@@ -46,12 +46,27 @@ jobs:
         shell: msys2 {0}
         run: rm $(which link)
 
-      - name: Install VSWhere
-        run: choco install vswhere
-
-      - name: Get VS Path
+      - name: Locate vs
         id: get_vs_path
-        run: echo "vs_path=$(vswhere -all -legacy -property installationPath)" >> $GITHUB_ENV
+        shell: pwsh
+        run: |
+          # Define common paths for Visual Studio 2022
+          $vsPaths = @(
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Professional",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community",
+          )
+
+          # Search for the first valid path
+          $vcvarsallPath = $vsPaths | Where-Object { Test-Path $_ } | Select-Object -First 1
+
+          if ($vcvarsallPath) {
+            Write-Output "Found vcvarsall.bat at: $vcvarsallPath"
+            echo "vs_path=$vcvarsallPath" >> $GITHUB_ENV
+          } else {
+            Write-Error "No VS installation found."
+            exit 1
+          }
 
       - name: Build FFmpeg with MSVC
         shell: bash
