--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
           $vsPaths = @(
             "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise",
             "C:\Program Files (x86)\Microsoft Visual Studio\2022\Professional",
-            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community",
+            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community"
           )
 
           # Search for the first valid path
