--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,34 +46,11 @@ jobs:
         shell: msys2 {0}
         run: rm $(which link)
 
-      - name: Locate vs
-        id: get_vs_path
-        shell: pwsh
-        run: |
-          # Define common paths for Visual Studio 2022
-          $vsPaths = @(
-            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise",
-            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Professional",
-            "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community"
-          )
-
-          # Search for the first valid path
-          $vcvarsallPath = $vsPaths | Where-Object { Test-Path $_ } | Select-Object -First 1
-
-          if ($vcvarsallPath) {
-            Write-Output "Found vcvarsall.bat at: $vcvarsallPath"
-            echo "vs_path=$vcvarsallPath" >> $GITHUB_ENV
-          } else {
-            Write-Error "No VS installation found."
-            exit 1
-          }
+      - uses: seanmiddleditch/gha-setup-vsdevenv@master
 
       - name: Build FFmpeg with MSVC
         shell: bash
         run: |
-          echo "getting vs path from vswhere and running vcvarsall.bat vswhere -all -legacy -property installationPath"
-          echo "vs path is ${{ steps.get_vs_path.outputs.vs_path }}"
-          "${{ steps.get_vs_path.outputs.vs_path }}\VC\Auxiliary\Build\vcvarsall.bat" x64
           msys2 -c "./configure --toolchain=msvc --arch=x86_64 --prefix=$(pwd)/build_output --extra-cflags="-DLIBTWOLAME_STATIC" --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic;make -j$(nproc);make install"
 
       - name: Prepare for artifact
