--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,14 +48,14 @@ jobs:
         run: rm $(which link)
 
       - name: Build FFmpeg with MSVC
-        shell: cmd4
+        shell: msys2 {0}
         run: | #export path to override msys cl and link (https://trac.ffmpeg.org/wiki/CompilationGuide/MSVC)
-          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" amd64
           export PATH="/c/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/BIN/amd64/":$PATH
           export CC=cl
           export LD=link
-          which cl
-          ./configure --toolchain=msvc --arch=x86_64 --extra-cflags="-DLIBTWOLAME_STATIC" --extra-ldflags="-pthread -static-libstdc++ -static-libgcc" --enable-cross-compile --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic --disable-dxva2 --disable-asm
+          which cl.exe
+          which link.exe
+          ./configure --toolchain=msvc --target-os=win64 --arch=x86_64 --extra-cflags="-DLIBTWOLAME_STATIC" --extra-ldflags="-pthread -static-libstdc++ -static-libgcc" --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic --disable-dxva2 --disable-asm
           make -j$(nproc)
           make install
 
