--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,10 +47,22 @@ jobs:
         shell: msys2 {0}
         run: rm $(which link)
 
+
+      - name: Find MSVC bin Folder
+        id: find_msvc_bin
+        shell: pwsh
+        run: |
+          $clPath = Get-ChildItem -Path "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC" -Recurse -Filter "cl.exe" | Select-Object -First 1 -ExpandProperty FullName
+          if (-not $clPath) { throw "cl.exe not found in expected path." }
+          $binFolder = Split-Path -Path $clPath -Parent
+          $msysPath = $binFolder -replace '^([A-Za-z]):', '/$1' -replace '\\', '/'
+          $msysPath = "/$msysPath"
+          echo "bin_folder=$msysPath" >> $GITHUB_ENV
+
       - name: Build FFmpeg with MSVC
         shell: msys2 {0}
         run: | #export path to override msys cl and link (https://trac.ffmpeg.org/wiki/CompilationGuide/MSVC)
-          export PATH="/c/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/BIN/amd64/":$PATH
+          export PATH="${{ steps.find_msvc_bin.outputs.bin_folder }}":$PATH
           export CC=cl
           export LD=link
           which cl.exe
