--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
         id: find_msvc_bin
         shell: pwsh
         run: |
-          $clPath = Get-ChildItem -Path "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC" -Recurse -Filter "cl.exe" | Select-Object -First 1 -ExpandProperty FullName
+          $clPath = Get-ChildItem -Path "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC" -Recurse -Filter "cl.exe" | Where-Object { $_.FullName -match "Hostx64\\x64" } | Select-Object -First 1 -ExpandProperty FullName
           if (-not $clPath) { throw "cl.exe not found in expected path." }
           $binFolder = Split-Path -Path $clPath -Parent
           $msysPath = $binFolder -replace '^([A-Za-z]):', '/$1' -replace '\\', '/'
