--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,15 +60,25 @@ jobs:
           echo "found bin folder: $binFolder"
           echo "bin_folder=$msysPath" >> $GITHUB_OUTPUT
 
+
+      - name: Run vcvars
+        shell: pwsh
+        run: |
+          $binFolder = Get-Content $GITHUB_ENV
+          $vcvars = "$binFolder/vcvars64.bat"
+          if (-not (Test-Path $vcvars)) { throw "vcvars64.bat not found in expected path." }
+          & $vcvars
+
       - name: Build FFmpeg with MSVC
         shell: msys2 {0}
         run: | #export path to override msys cl and link (https://trac.ffmpeg.org/wiki/CompilationGuide/MSVC)
           export PATH="/c/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Tools/MSVC/14.29.30133/bin/HostX64/x64/:$PATH"
           export CC=cl
           export LD=link
+          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           which cl.exe
           which link.exe
-          ./configure --toolchain=msvc --target-os=win64 --arch=x86_64 --extra-ldflags="-pthread -static-libstdc++ -static-libgcc" --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic --disable-dxva2 --disable-asm
+          ./configure --toolchain=msvc --target-os=win64 --arch=x86_64 --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic --disable-dxva2 --disable-asm
           make -j$(nproc)
           make install
 
