--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,11 @@ jobs:
           ref: release/${{ env.VERSION }}
 
       - uses: msys2/setup-msys2@v2
-
-      - name: Install yasm
-        run: choco install yasm -y
+        with:
+          install: >-
+            pkg-config
+            yasm
+            make
           
       - name: Remove MSYS2 link
         shell: msys2 {0}
@@ -60,6 +62,7 @@ jobs:
           call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" amd64
           which cl.exe
           which link.exe
+          which make
           bash -c "./configure --prefix=$(pwd)/build_output --toolchain=msvc --target-os=win64 --arch=x86_64 --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic --disable-dxva2 --disable-asm"
           bash -c "make -j$(nproc)"
           bash -c "make install"
