--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,11 @@ jobs:
       - name: Install make
         shell: msys2 {0}
         run: |
+          pacman -S --noconfirm base-devel
+          pacman -R --noconfirm make
           pacman -S --noconfirm make
-          pacman -S --noconfirm diffutils
-          pacman -S --noconfirm pkg-config
+          
+
 
       - name: Build FFmpeg with MSVC
         shell: cmd
