BNVHGB VNFYJTBHGV NFT

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
     env:
       VERSION: ${{ needs.set-version.outputs.version }}
     steps:
+
       - name: Check out FFmpeg
         uses: actions/checkout@v4
         with:
@@ -45,16 +46,11 @@ jobs:
         run: |
           pacman -S --noconfirm base-devel
 
-      - name: Check out this repo
-        uses: actions/checkout@v4
-        with:
-          path: ../fftools
-
       - name: Build FFmpeg with MSVC
         shell: msys2 {0}
         run: | 
           echo "running vcvars.sh from fftools"
-          mv ../fftools/vcvars.sh .
+          curl -L https://github.com/${{ github.repository }}/blob/master/vcvars.sh -o vcvars.sh
           source ./vcvars.sh
           echo $PATH
           ./configure --prefix=$(pwd)/build_output --toolchain=msvc --target-os=win64 --arch=x86_64 --disable-programs --disable-doc --disable-network --disable-everything --enable-protocol=file --enable-decoder=h264 --enable-parser=h264 --enable-demuxer=h264 --enable-muxer=mp4 --enable-pic --disable-dxva2 --disable-asm
